<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/txt_origin"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/txt_destination"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="#000"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="#000"
            android:textSize="16sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/txt_distance_information"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/distanceInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/txt_distance_information"
        android:textColor="#000"/>

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="@drawable/rounded"
        android:text="@string/txt_ok"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>