<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Normal"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_satellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Satellite"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/hybrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hybrid"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.45"
            android:orientation="vertical"
            android:background="@drawable/main_menu_bg"
            android:padding="5dp">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/StyleLiveText"
                            android:text="@string/latitude"/>

                        <TextView
                            android:id="@+id/latitudeText"
                            style="@style/StyleLiveText2"/>

                    </LinearLayout>

                    <TextView
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">


                        <TextView
                            style="@style/StyleLiveText"
                            android:text="@string/longitude"/>


                        <TextView
                            android:id="@+id/longitudeText"
                            style="@style/StyleLiveText2"/>


                    </LinearLayout>

                    <TextView
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">


                        <TextView
                            style="@style/StyleLiveText"
                            android:text="@string/address"/>


                        <TextView
                            android:id="@+id/addressText"
                            style="@style/StyleLiveText2"/>


                    </LinearLayout>

                    <TextView
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">


                        <TextView
                            style="@style/StyleLiveText"
                            android:text="@string/city"/>


                        <TextView
                            android:id="@+id/cityText"
                            style="@style/StyleLiveText2"/>


                    </LinearLayout>

                    <TextView
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">


                        <TextView
                            style="@style/StyleLiveText"
                            android:text="@string/state"/>


                        <TextView
                            android:id="@+id/stateText"
                            style="@style/StyleLiveText2"/>


                    </LinearLayout>

                    <TextView
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">


                        <TextView
                            style="@style/StyleLiveText"
                            android:text="@string/Knowaddress"/>


                        <TextView
                            android:id="@+id/knowAddressText"
                            style="@style/StyleLiveText2"/>


                    </LinearLayout>

                    <TextView
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">


                        <TextView
                            style="@style/StyleLiveText"
                            android:text="@string/Postal_code"/>


                        <TextView
                            android:id="@+id/postalCodeText"
                            style="@style/StyleLiveText2"/>


                    </LinearLayout>

                    <TextView
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">


                        <TextView
                            style="@style/StyleLiveText"
                            android:text="@string/Country_"/>


                        <TextView
                            android:id="@+id/countyText"
                            style="@style/StyleLiveText2"/>


                    </LinearLayout>

                    <TextView
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>
                </LinearLayout>

            </ScrollView>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>