<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NearByLocation"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Normal"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_satellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Satellite"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/hybrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hybrid"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="169dp"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp">

        <ImageView
            android:id="@+id/img_zoom_in"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/zoom_in_btn" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <ImageView
            android:id="@+id/img_zoom_out"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/zoom_in_out_btn" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/main_menu_bg"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/l111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/StyleLiveText"
                        android:text="@string/latitude" />

                    <TextView
                        android:id="@+id/latitudeText"
                        style="@style/StyleLiveText2" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">


                    <TextView
                        style="@style/StyleLiveText"
                        android:text="@string/longitude" />


                    <TextView
                        android:id="@+id/longitudeText"
                        style="@style/StyleLiveText2" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">


                    <TextView
                        style="@style/StyleLiveText"
                        android:text="@string/address" />


                    <TextView
                        android:id="@+id/addressText"
                        style="@style/StyleLiveText2" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">


                    <TextView
                        style="@style/StyleLiveText"
                        android:text="@string/city" />


                    <TextView
                        android:id="@+id/cityText"
                        style="@style/StyleLiveText2" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">


                    <TextView
                        style="@style/StyleLiveText"
                        android:text="@string/state" />


                    <TextView
                        android:id="@+id/stateText"
                        style="@style/StyleLiveText2" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">


                    <TextView
                        style="@style/StyleLiveText"
                        android:text="@string/Knowaddress" />


                    <TextView
                        android:id="@+id/knowAddressText"
                        style="@style/StyleLiveText2" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">


                    <TextView
                        style="@style/StyleLiveText"
                        android:text="@string/Postal_code" />


                    <TextView
                        android:id="@+id/postalCodeText"
                        style="@style/StyleLiveText2" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">


                    <TextView
                        style="@style/StyleLiveText"
                        android:text="@string/Country_" />


                    <TextView
                        android:id="@+id/countyText"
                        style="@style/StyleLiveText2" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>


</RelativeLayout>